--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </section>
             <section class="project1">
                 <h3>Portfolio</h3>
-                <a href=""><img src="./ComingSoon4_3.png" alt="Coming Soon"></a>
+                <a href="https://github.com/FoundEven/WeekTwoChallenge_Portfolio"><img src="./portfolio1.PNG" alt="Image of my Portfolio."></a>
             </section>
             <section class="project1">
                 <h3>Coming Soon</h3> 
