--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <a href="https://github.com/FoundEven/WeekTwoChallenge_Portfolio"><img src="./portfolio1.PNG" alt="Image of my Portfolio."></a>
             </section>
             <section class="project1">
-                <h3>Coming Soon</h3> 
-                <a href=""><img src="./ComingSoon4_3.png" alt="Coming Soon"></a> 
+                <h3>Password Generator</h3> 
+                <a href="https://foundeven.github.io/weekThreeChallenge_PasswordGenerator/"><img src="./passwordGen43.PNG" alt="Image of my password generator website."></a> 
             </section>
             <section class="project1">
                 <h3>Coming Soon</h3>
