Added project one to portfolio

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <a href="https://foundeven.github.io/weekThreeChallenge_PasswordGenerator/"><img src="./passwordGen43.PNG" alt="Image of my password generator website."></a> 
             </section>
             <section class="project1">
-                <h3>Coming Soon</h3>
-                <a href=""><img src="./ComingSoon4_3.png" alt="Coming Soon"></a>
+                <h3>Pokemon Team Deck</h3>
+                <a href="https://cbaca4.github.io/project01-game-picker/"><img src="./FinalP2.PNG" alt="Coming Soon"></a>
             </section>
             <section class="project1">
                 <h3>Coming Soon</h3>
