--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <a href="https://cbaca4.github.io/project01-game-picker/"><img src="./FinalP2.PNG" alt="Coming Soon"></a>
             </section>
             <section class="project1">
-                <h3>Coming Soon</h3>
-                <a href=""><img src="./ComingSoon4_3.png" alt="Coming Soon"></a>
+                <h3>Wizard Escape</h3>
+                <a href="https://murmuring-springs-90075-ee5dfd14bef1.herokuapp.com/"><img src="./wizard43.PNG" alt="Coming Soon"></a>
             </section>
             <section class="project1">
                 <h3>Coming Soon</h3>
